Outline for engine class created

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,13 @@
 cmake_minimum_required(VERSION 2.15)
 
 project(main)
-add_executable(main src/main.cpp)
+
+set(SOURCES 
+	src/main.cpp
+	src/Engine.cpp
+	src/Engine.hpp
+)
+
+include_directories(/usr/include/SDL2)
+add_executable(main ${SOURCES})
+target_link_libraries(main SDL2)
