Test code for textures has been made
Additionally, a memory bug has been fixed.
The destructors were being called after SDL had exited
Overwiting the vector will force-call the destructors for texture.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ set(SOURCES
 )
 
 include_directories(/usr/include/SDL2)
+add_compile_options(-g -Wall)
 add_executable(main ${SOURCES})
 target_link_libraries(main SDL2)
 target_link_libraries(main SDL2_image)
