Starting prototype for an event class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,8 +18,15 @@ set(SOURCES
 	src/Texture.cpp
 )
 
+set(SOURCES_PROTOTYPE
+	proto/main.cpp
+	proto/Event.hpp
+	proto/Testclass.hpp
+)
+
 include_directories(/usr/include/SDL2)
 add_compile_options(-g -Wall)
 add_executable(main ${SOURCES})
+add_executable(proto ${SOURCES_PROTOTYPE})
 target_link_libraries(main SDL2)
 target_link_libraries(main SDL2_image)
