Miscellaneous changes to a few files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,8 @@ set(SOURCES
 	src/Logic/Position.cpp
 )
 
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
 include_directories(src)
 add_compile_options(-g -Wall)
 add_executable(main ${SOURCES})
