Modified main to use the new InputHandler class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,9 @@ set(SOURCES
 	src/Controllers/Engine.cpp
 	src/Controllers/Engine.hpp
 
+	src/Controllers/InputHandler.cpp
+	src/Controllers/InputHandler.hpp
+
 	src/Controllers/Scene.hpp
 	src/Controllers/Scene.cpp
 
