--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.5)
 
 project(main)
+set(CMAKE_CXX_STANDARD 20)
 
 set(SOURCES 
 	src/main.cpp
@@ -32,7 +33,20 @@ set(SOURCES
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 include_directories(src)
-add_compile_options(-g -Wall)
+
+IF(WIN32)
+	include_directories(libs/SDL2/include)
+	include_directories(libs/SDL2_image/include)
+endif()
+
 add_executable(main ${SOURCES})
-target_link_libraries(main SDL2)
-target_link_libraries(main SDL2_image)
+
+IF(WIN32)
+	target_link_libraries(main ${CMAKE_CURRENT_SOURCE_DIR}/libs/SDL2/lib/x64/SDL2.lib)
+	target_link_libraries(main ${CMAKE_CURRENT_SOURCE_DIR}/libs/SDL2_image/lib/x64/SDL2_image.lib)
+endif()
+
+if(LINUX)
+	target_link_libraries(main SDL2)
+	target_link_libraries(main SDL2_image)
+endif()
